[gd_scene load_steps=2 format=2]

[ext_resource path="res://Objects/Scripts/OptionsMenu.gd" type="Script" id=1]

[node name="OptionsMenu" type="Panel"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -276.0
margin_top = -170.0
margin_right = 276.0
margin_bottom = 170.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ApplyBut" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -48.0
margin_top = -20.0
text = "Apply"

[node name="CloseBut" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -164.0
margin_top = -20.0
margin_right = -120.0
text = "Close"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicLbl" type="Label" parent="GridContainer"]
margin_right = 75.0
margin_bottom = 14.0
text = "Music Vol"
align = 1

[node name="SFXLbl" type="Label" parent="GridContainer"]
margin_left = 79.0
margin_right = 138.0
margin_bottom = 14.0
text = "SFX Vol"
align = 1

[node name="MusSlider" type="VSlider" parent="GridContainer"]
margin_top = 18.0
margin_right = 16.0
margin_bottom = 218.0
rect_min_size = Vector2( 0, 200 )
min_value = -20.0
max_value = 6.0
step = 0.0
tick_count = 5
ticks_on_borders = true

[node name="SFXSlider" type="VSlider" parent="GridContainer"]
margin_left = 79.0
margin_top = 18.0
margin_right = 95.0
margin_bottom = 218.0
rect_min_size = Vector2( 0, 200 )
min_value = -20.0
max_value = 6.0
tick_count = 5
ticks_on_borders = true

[node name="MusLbl2" type="Label" parent="GridContainer"]
margin_top = 222.0
margin_right = 75.0
margin_bottom = 236.0
text = "Music Mute"
align = 1

[node name="SFXLbl2" type="Label" parent="GridContainer"]
margin_left = 79.0
margin_top = 222.0
margin_right = 138.0
margin_bottom = 236.0
text = "SFX Mute"
align = 1

[node name="MusMute" type="CheckBox" parent="GridContainer"]
margin_top = 240.0
margin_right = 75.0
margin_bottom = 264.0

[node name="SFXMute" type="CheckBox" parent="GridContainer"]
margin_left = 79.0
margin_top = 240.0
margin_right = 138.0
margin_bottom = 264.0
[connection signal="pressed" from="ApplyBut" to="." method="_on_ApplyBut_pressed"]
[connection signal="pressed" from="CloseBut" to="." method="_on_CloseBut_pressed"]
